--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,15 +27,13 @@ builds:
       - -s -w
     env:
       - CGO_ENABLED=0
-    flags:
-      - -trimpath
     asmflags:
       - all=-trimpath={{.Env.GOPATH}}
     gcflags:
       - all=-trimpath={{.Env.GOPATH}}
 
 archives:
-  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
+  - name_template: '{{ .ProjectName }}-{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
 
 release:
   prerelease: auto
