--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,7 +24,7 @@ builds:
       - darwin_amd64
       - darwin_arm64
     ldflags:
-      - -s -w
+      - -s -w -X github.com/umatare5/telee/cli.version={{ .Version }}
     env:
       - CGO_ENABLED=0
     asmflags:
